// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.dataattribution.proto;

import "third_party/protobuf/cpp_features.proto";

option features.(pb.cpp).string_type = VIEW;
option java_package = "com.google.android.as.oss.dataattribution.proto";
option java_multiple_files = true;

// The data required to populate [AttributionChipData].
// Next ID: 4
message AttributionChipData {
  // A bitmap that should match the icon/image the user sees on the long-pressed
  // entity.
  oneof chip_bitmap {
    // Chip icon, will be tinted.
    bytes chip_icon = 3;

    // Chip image, will not be tinted.
    bytes chip_image = 1;
  }

  // the label that should match the full egress data if the user clicks on the
  // long-pressed entity.
  string chip_label = 2;
}
